<resources>
    <string name="app_name">Agente</string>
    <string name="btn_salir">SALIR</string>
    <string name="btn_continuar">CONTINUAR</string>
    <string name="btn_aceptar">ACEPTAR</string>
    <string name="btn_cancelar">CANCELAR</string>
    <string name="btn_terminar">TERMINAR</string>
    <string name="btn_ingresar_otra_cuenta">INGRESAR OTRA CUENTA</string>
    <string name="btn_olvido_contrasenha">¿HA OLVIDADO SU CLAVE DE ACCESO?</string>
    <string name="btn_regresar">REGRESAR</string>
    <string name="btn_validar">VALIDAR</string>
    <string name="btn_anular_operacion">ANULAR OPERACION</string>
    <string name="tv_ok">OK</string>
    <string name="btn_confirmar_operacion">CONFIRMAR OPERACIÓN</string>
    <string name="btn_cancelar_pago_servicio">CANCELAR OPERACIÓN</string>
    <string name="btn_pagar_otros_servicios">PAGAR OTROS SERVICIOS</string>
    <string name="tv_pago_servicios">PAGO DE SERVICIOS</string>
    <string name="tv_rayitas">==========================================</string>
    <string name="titulo_acceso_sistema">ACCESO AL SISTEMA</string>
    <string name="tv_ingrese_num_celualr_login">INGRESE SU NUMERO DE CELULAR</string>
    <string name="tv_ingrese_clave_acceso_login">INGRESE SU CLAVE DE ACCESO</string>
    <string name="titulo_terminos_condiciones">TÉRMINOS Y CONDICIONES DE USO - COMERCIO</string>
    <string name="rbtn_acepto_terminos_condiciones">ACEPTO TÉRMINOS Y CONDICIONES</string>
    <string name="tv_terminos">NO! utilice nuestros servicios de forma indebida. Por ejemplo, no interfiera en nustros Servicios ni intente diferente a la interfaz y las instrucciones que le proporcionamos.
    Puede utilizar nuestros servicios solo con las leyes y regulaciones correspondientes de control de exportacion y reexportacion. Podremos suspender el servicio si usted incumple nuestras condiciones o politicas o si estamos investigando una presunta confraternidad.
    El uso de nuestos servicios nos otrosga derechos de propiedad intelectual.</string>
    <string name="titulo_ingreso_informacion_comercio">INGRESO DE INFORMACIÒN DEL COMERCIO</string>
    <string name="tv_representante">INGRESE REPRESENTANTE LEGAL:</string>
    <string name="tv_distrito">DISTRITO:</string>
    <string name="tv_ingrese_ruc_comercio">INGRESE RUC:</string>
    <string name="tv_ingrese_razon_social_comercio">INGRESE RAZÓN SOCIAL:</string>
    <string name="tv_ingrese_dni">INGRESE D.N.I.:</string>
    <string name="tv_departamento_comercio">DEPARTAMENTO:</string>
    <string name="tv_provincia_comercio">PROVINCIA:</string>
    <string name="tv_ingrese_direccion_comercio">INGRESE DIRECCIÓN</string>
    <string name="titulo_afiliacion_comercio">AFILIACIÓN DE COMERCIO</string>
    <string name="tv_ingrese_clave_acceso">INGRESE SU CLAVE DE ACCESO</string>
    <string name="tv_confirme_clave_acceso">CONFIRME SU CLAVE DE ACCESO</string>
    <string name="tv_pregunta">PREGUNTA</string>
    <string name="tv_respuesta">RESPUESTA</string>
    <string name="tv_confirme">CONFIRME</string>
    <string name="tv_ingrese_correo_electronico">INGRESE SU CORREO ELECTRÓNICO</string>
    <string name="tv_ingrese_celular_acceso_internet">CELULAR CON ACCESO A INTERNET</string>
    <string name="titulo_ingreso_cuentas_comercio">INGRESO DE CUENTAS DEL COMERCIO</string>
    <string name="tv_cuentas_registradas">CUENTAS REGISTRADAS</string>
    <string name="rbtn_ahorros">AHORROS</string>
    <string name="rbtn_cuenta_corriente">CTA. CTE</string>
    <string name="tv_ingrese_numero_cuenta">INGRESE NÚMERO DE CUENTA</string>
    <string name="tv_codigo_interbancario">INGRESE CÓDIGO INTERBANCARIO</string>
    <string name="tv_tipo_cuenta">TIPO DE CUENTA</string>
    <string name="tv_banco">BANCO:</string>
    <string name="tv_moneda">MONEDA:</string>
    <string name="titulo_registro_comercios">REGISTRO DE COMERCIOS</string>
    <string name="tv_comercios_registrados">COMERCIOS REGISTRADOS</string>
    <string name="tv_numero_celular_no_registrado">NÚMERO DE CELULAR NO REGISTRADO</string>
    <string name="tv_ingrese_num_celular">INGRESE SU NÚMERO DE CELULAR</string>
    <string name="tv_duda_queja">SI TIENES ALGUNA DUDA O INCONVENIENTE PUEDES LLAMARNOS AL:</string>
    <string name="tv_telefono_central_atencion_cliente">(511) 601-1360</string>
    <string name="tv_email_atencion_cliente">E-Mail</string>
    <string name="tv_correo_cliente_base_peru">correocliente@baseperu.com</string>
    <string name="titulo_menu_comercio">MENÚ DEL COMERCIO</string>
    <string name="tv_seleccione_operacion">SELECCIONE UNA OPERACION</string>
    <string name="btn_anulacion_menu">ANULACIÓN</string>
    <string name="btn_consulta_voucher">CONSULTA DE VOUCHERS</string>
    <string name="btn_reporte_movimientos">REPORTE DE MOVIMIENTOS</string>
    <string name="btn_agentes_contactos">AGENTES Y CONTACTOS</string>
    <string name="btn_facturacion_comercio">FACTURACIÓN DEL COMERCIO</string>
    <string name="btn_cambio_clave">CAMBIO DE CLAVE</string>
    <string name="btn_mantenimiento_menu">MANTENIMIENTO</string>
    <string name="titulo_recuperacion_clave">RECUPERACIÓN DE CLAVE</string>
    <string name="tv_ingrese_numero_celular">INGRESE SU NÚMERO DE CELULAR</string>
    <string name="tv_pregunta_autenticacion">PREGUNTA DE AUTENTICACIÓN</string>
    <string name="tv_ingrese_respuesta">INGRESE SU RESPUESTA</string>
    <string name="tv_ingrese_nueva_clave">INGRESE SU NUEVA CLAVE</string>
    <string name="tv_pregunta_secreta_olvidada">¿HA OLVIDADO SU PREGUNTA SECRETA?</string>
    <string name="titulo_cambio_clave_acceso_exitosa">CAMBIO DE CLAVE DE ACCESO EXITOSA</string>
    <string name="tv_confirmacion_operacion_cambio_clave">CONFIRMACIÓN DE OPERACIÓN DE CAMBIO DE CLAVE</string>
    <string name="tv_operacion_exitosa">OPERACIÓN EXITOSA</string>
    <string name="tv_clave_cambiada_exito">SU CLAVE HA SIDO CAMBIADA CON ÉXITO</string>
    <string name="titulo_cambio_clave_acceso">CAMBIO DE CLAVE DE ACCESO</string>
    <string name="tv_ingrese_clave_acceso_actual">INGRESE SU CLAVE DE ACCESO ACTUAL</string>
    <string name="tv_primera_pregunta">PREGUNTA SECRETA</string>
    <string name="tv_responda_pregunta">RESPONDA PREGUNTA</string>
    <string name="tv_ingrese_nueva_clave_acceso">INGRESE NUEVA CLAVE DE ACCESO</string>
    <string name="tv_confirme_nueva_clave_acceso">CONFIRME NUEVA CLAVE DE ACCESO</string>
    <string name="title_activity_listar_operario">ListarOperario</string>
    <string name="titulo_listado_voucher_anulaciones">LISTADO DE VOUCHER DE ANULACIONES</string>
    <string name="titulo_detalle_consumo">DETALLE DEL CONSUMO</string>
    <string name="tv_superagente_voucher">*** SÚPER AGENTE ***</string>
    <string name="tv_numero_unico_voucher">NÚMERO ÚNICO:</string>
    <string name="tv_fecha_voucher_consumo">FECHA:</string>
    <string name="tv_hora_voucher_consumo">HORA:</string>
    <string name="tv_nro_unico_voucher_consumo">NRO. ÚNICO:</string>
    <string name="tv_importe_voucher_consumo">IMPORTE:</string>
    <string name="tv_banco_voucher_consumo">BANCO:</string>
    <string name="tv_datos_comercio_consumo">DATOS DEL COMERCIO</string>
    <string name="titulo_lista_operario">LISTADO DE OPERARIOS</string>
    <string name="title_activity_agregar_operario">AgregarOperario</string>
    <string name="titulo_reporte_movimientos">REPORTE DE MOVIMIENTOS</string>
    <string name="tv_ingrese_clave_operario">INGRESE LA CLAVE DEL OPERADOR</string>
    <string name="btn_pago_consumo">PAGO DE CONSUMOS</string>
    <string name="titulo_ingreso_tarjeta_cliente">INGRESO DE TARJETA DEL CLIENTE</string>
    <string name="tv_ingreso_tarjeta_cliente">INGRESE EL NUMERO DE TARJETA DEL CLIENTE</string>
    <string name="rdbtn_codigo_cvv">CÓDIGO CVV</string>
    <string name="rdbtn_numero_pin">NUMERO DE PIN</string>
    <string name="tv_ingrese">INGRESE PIN</string>
    <string name="titulo_voucher_pago_consumo">VOUCHER DE PAGO DE CONSUMO</string>
    <string name="tv_transaccion_exitosa">TRANSACCIÓN EXITOSA</string>
    <string name="tv_pin_verificado">PIN VERIFICADO POR EL EMISOR</string>
    <string name="btn_efectuar_otra_operacion">EFECTUAR OTRA OPERACIÓN</string>
    <string name="tv_nombre_operario">NOMBRE DEL OPERARIO</string>
    <string name="tv_seleccionar_segun_tarjeta">SELECCIONAR SEGÚN TIPO TARJETA</string>
    <string name="tv_numero_tarjeta">NÚMERO DE TARJETA</string>
    <string name="titulo_seleccion_servicio_pagar">SELECCIÓN DEL SERVICIO A PAGAR</string>
    <string name="tv_seleccione_servicio">SELECCIONE EL SERVICIO</string>
    <string name="tv_seleccione_tipo_servicio">SELECCIONE TIPO DE SERVICIO</string>
    <string name="tv_ingrese_numero_servicio">CÓDIGO DEL</string>
    <string name="titulo_seleccion_recibos_servicios_pagar">SELECCIÓN DE RECIBOS A PAGAR</string>
    <string name="tv_suministro_pago_servicio">NÚMERO DE RECIBO:</string>
    <string name="tv_titular_pago_servicio">TITULAR: </string>
    <string name="tv_f_vencimiento_recibo_servicio">F. VENCIMIENTO</string>
    <string name="tv_monto_recibo_servicio">MONTO</string>
    <string name="titulo_monto_pago_pin_pago_servicios">INGRESO DEL MONTO DE PAGO CON PIN</string>
    <string name="tv_nombre_cliente_pago_servicio">NOMBRE DEL CLIENTE: </string>
    <string name="tv_tarjeta_cifrada_pago_servicios">TARJETA CIFRADA: </string>
    <string name="tv_ingrese_pin_tarjeta_servicio">INGRESE PIN</string>
    <string name="tv_servicio_pagar">SERVICIO A PAGAR:</string>
    <string name="tv_tipo_servicio_pagar">TIPO DE SERVICIO:</string>
    <string name="tv_tipo_tasa">TIPO DE TASA:</string>
    <string name="tv_pago_cuotas">¿PAGO EN CUOTAS?</string>
    <string name="tv_ingrese_ping">INGRESE PIN</string>
    <string name="tv_cantidad_cuotas">CANTIDAD DE CUOTAS</string>
    <string name="titulo_conformidad_pago_servicios">CONFORMIDAD DE PAGO DE SERVICIOS</string>
    <string name="tv_numero_tarjeta_pagar_servicios">NÚMERO DE TARJETA:</string>
    <string name="tv_servicio_pagar_conformidad">SERVICIO A PAGAR:</string>
    <string name="tv_dni_cliente_conformidad">DNI DEL CLIENTE:</string>
    <string name="tv_comision_servicio_pagar">COMISIÓN DEL SERVICIO:</string>
    <string name="tv_total_servicio_pagar">IMPORTE TOTAL:</string>
    <string name="tv_importe_pago_servicio">COSTO DEL SERVICIO</string>
    <string name="tv_numero_recibo">CÓDIGO DEL CLIENTE</string>
    <string name="tv_nombre_titular">NOMBRE DEL TITULAR</string>
    <string name="titulo_voucher_pago_servicio">VOUCHER DE PAGO DEL SERVICIO</string>
    <string name="tv_servicio_voucher">SERVICIO:</string>
    <string name="tv_tipo_servicio_voucher">TIPO DE SERVICIO:</string>
    <string name="tv_num_suministro_voucher">CÓDIGO DEL CLIENTE:</string>
    <string name="tv_pagado_por_voucher">PAGADO POR:</string>
    <string name="tv_numero_tarjeta_voucher_servicio">NÚMERO DE TARJETA</string>
    <string name="tv_dni_servicios">DNI:</string>
    <string name="tv_forma_pago_voucher">FORMA DE PAGO:</string>
    <string name="tv_importe_voucher">IMPORTE:</string>
    <string name="tv_comision_operacion_voucher">COMISIÓN:</string>
    <string name="tv_total_servicio_pagar_voucher">TOTAL:</string>
    <string name="tv_gracias_preferencia">*** GRACIAS POR SU PREFERENCIA ***</string>
    <string name="btn_firmar">FIRMAR</string>
    <string name="tv_titulo_ingresar_firma">INGRESE SU FIRMA</string>
</resources>