<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorfondoactivity"
    android:orientation="vertical"
    tools:context="com.example.administrador.superagentecomercio.superagente.ConformidadPagoServicios">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/black">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:src="@drawable/banco_comercio_logo" />

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/titulo_conformidad_pago_servicios"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorFondo"
            android:gravity="center"
            android:text="@string/titulo_conformidad_pago_servicios"
            android:textColor="@color/color_blanco"
            android:textSize="16dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="340dp"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/color_blanco">

                    <TextView
                        android:id="@+id/tv_nombre_recibo_usuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/tv_numero_recibo"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_nro_servicio_servicio_pagar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginLeft="14dp"/>

                </TableRow>

                <!--<TableRow
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/color_blanco">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/tv_nombre_titular"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_nombre_titular_pago_servicio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="14dp"/>

                </TableRow>-->

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/color_blanco">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/tv_dni_cliente_conformidad"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_dni_cliente_conformidad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="14dp"/>

                </TableRow>

                <TableRow
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/color_blanco">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/tv_numero_tarjeta_pagar_servicios"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_numero_tarjeta_cifrada_pago_servicio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="14dp"/>

                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/color_blanco">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/tv_servicio_pagar"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_servicio_pagar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="14dp"
                        />

                </TableRow>

                <TableRow
                    android:id="@+id/ll_tipo_servicio_pagar_conforme"
                    android:layout_marginTop="10dp"
                    android:background="@color/color_blanco"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/tv_tipo_servicio_pagar"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_tipo_servicio_pagar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="14dp" />

                </TableRow>

                <TableRow
                    android:id="@+id/ll_tipo_tasa_pagar_conforme"
                    android:layout_marginTop="10dp"
                    android:background="@color/color_blanco"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/tv_tipo_tasa"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_tasa_servicio_pagar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="14dp" />

                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="340dp"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/color_blanco">

                    <TextView
                        android:id="@+id/tv_importe_servicio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/tv_importe_pago_servicio"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_tipo_moneda_servicio_pagar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_monto_servicio_pagar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right" />

                </TableRow>

                <TableRow
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/color_blanco">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/tv_comision_servicio_pagar"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_tipo_moneda_comision_pagar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_monto_comision_servicio_pagar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="2.00" />

                </TableRow>

                <TableRow
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/color_blanco">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/tv_total_servicio_pagar"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_tipo_moneda_total_pagar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_monto_total_servicio_pagar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right" />

                </TableRow>

            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_continuar_pago"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_blanco"
                    android:text="@string/btn_confirmar_operacion" />

                <Button
                    android:id="@+id/btn_cancelar_pago_servicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/color_blanco"
                    android:text="@string/btn_cancelar_pago_servicio" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
