<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorfondoactivity"
    android:orientation="vertical"
    tools:context="com.example.administrador.superagentecomercio.superagente.SeleccionServicioPagar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/black">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:src="@drawable/banco_comercio_logo" />

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textViewInfoElectronica"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorFondo"
            android:gravity="center"
            android:text="@string/titulo_seleccion_servicio_pagar"
            android:textColor="@color/color_blanco"
            android:textSize="16dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_seleccione_servicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/tv_seleccione_servicio" />

                <Spinner
                    android:id="@+id/sp_seleccion_servicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/spinner_selector"
                    android:gravity="center"
                    android:spinnerMode="dialog" />

                <TextView
                    android:id="@+id/tv_seleccion_tipo_servicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/tv_seleccione_tipo_servicio" />

                <Spinner
                    android:id="@+id/sp_seleccion_tipo_servicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/spinner_selector"
                    android:gravity="center"
                    android:spinnerMode="dialog" />

                <TextView
                    android:id="@+id/tv_seleccion_tipo_tasa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/tv_seleccione_tipo_servicio"
                    android:visibility="gone" />

                <Spinner
                    android:id="@+id/sp_seleccion_tipo_tasa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/spinner_selector"
                    android:gravity="center"
                    android:spinnerMode="dialog"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center">

                    <!--<TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_ingrese_numero_servicio" />-->

                    <TextView
                        android:id="@+id/tv_nombre_recibo_usuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="@string/tv_ingrese_numero_servicio"
                        android:textSize="14dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/tv_tipo_moneda"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="S./"/>

                    <EditText
                        android:id="@+id/txt_numero_servicio"
                        android:layout_width="170dp"
                        android:layout_height="30dp"
                        android:background="@color/color_blanco"
                        android:singleLine="true" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btn_aceptar_cuenta_tarjeta_abono"
                    android:layout_width="175dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@color/color_blanco"
                    android:text="@string/btn_aceptar" />

                <Button
                    android:id="@+id/btn_cancelar_cuenta_tarjeta_abono"
                    android:layout_width="175dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="9dp"
                    android:layout_weight="1"
                    android:background="@color/color_blanco"
                    android:text="@string/btn_cancelar" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
